# flex

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  application.py  domain.py  infrastructure.py  repository.py
backend/tests/: conftest.py
backend/tests/application/: test_dataset_usecases.py  test_generate_edit.py  test_generate_mesh.py  test_run_batch.py  test_segment_image.py
backend/tests/contract/: test_datasets.py  test_full_flow.py  test_images_edits.py  test_mesh.py  test_models.py  test_presets.py  test_runs.py  test_segments.py
backend/tests/repository/: test_workspace_repo.py
backend/tests/unit/: test_domain.py  test_presets.py  test_relief_mesh.py  test_workspace_domain.py
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/__tests__/: ComparePage.test.tsx  WorkspacePage.test.tsx  editor-flow.test.tsx  routing.test.tsx
frontend/src/api/: client.ts
scripts/: README.md  curate.py  download_dataset.sh  requirements.txt  train_inpaint_lora.py
scripts/curated/: manifest.jsonl
specs/001-facial-expression-editing/: data-model.md  design.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+35 files in other folders)
