[project]
name = "flex-backend"
version = "1.0.0"
description = "Prompt-guided facial expression editing for animated characters"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "python-multipart>=0.0.12",
    "pillow>=10.4",
    "numpy>=2.0",
    # Heavy model deps — lazily imported by infrastructure adapters at runtime.
    "diffusers>=0.31",
    "transformers>=4.45",
    "peft>=0.13",  # required by diffusers load_lora_weights (scripts/train_inpaint_lora.py adapters)
    "torch>=2.4",
    "open-clip-torch>=2.26",
    # Expert 3D export: TripoSR (install from git: pip install git+https://github.com/VAST-AI-Research/TripoSR)
    # produces a trimesh.Trimesh; trimesh handles GLB export.
    "trimesh>=4.4",
    # Study-workspace persistence (feature 002): Postgres in compose, SQLite in tests.
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
files = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
